# stripe

./: .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yaml  heroku.yml  pyproject.toml  requirements.txt
app/: settings.py  urls.py
app/static/: main.js
payment_service/: admin.py  models.py  urls.py  views.py
payment_service/migrations/: 0001_initial.py  0002_order.py  0003_alter_order_amount.py  0004_order_status.py  0005_order_product.py  0006_auto_20220915_1828.py  0007_auto_20220915_1842.py
payment_service/templates/: index.html
payment_service/templates/payment_service/: base.html  cart_list.html  navbar.html  payment_failed.html  payment_success.html  product_detail.html  product_list.html
