[tool.poetry]
name = "payment_service"
version = "0.1.0"
description = ""
authors = ["samolin <samolin.vlad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0"
stripe = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
